# 30days-backend

./: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml
config/: settings.py  urls.py
core/: models.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_activity_review_alter_activity_submission.py
dashboard/: models.py  serializers.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
leaderboards/: models.py  serializers.py  urls.py  views.py
leaderboards/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_rename_helpful_count_review_helpful_and_more.py  0004_alter_review_options_alter_review_rating.py
submissions/: models.py  serializers.py  urls.py  utils.py  views.py
submissions/migrations/: 0001_initial.py  0002_initial.py  0003_submission_cloudinary_public_id.py  0004_remove_submissionimage_updated_at_and_more.py
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_pointsadjustment.py
versions/: admin.py  models.py  serializers.py  urls.py  views.py
versions/management/commands/: create_test_version.py
versions/migrations/: 0001_initial.py  0002_alter_version_options_alter_version_description_and_more.py  0003_alter_version_options_version_codename_and_more.py
